# otter-welcome-buddy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yaml  build.yml  production.yml  push_to_dev.yml  push_to_prod.yml
data/: schema.sql
data/migrations/: README  env.py
data/migrations/versions/: 079d1b8a048e_initial_setup.py  0924b3e7935e_add_interview_match_table.py  18b001685428_add_user_leetcodeuser_and_.py  a9fa41ae7138_create_interview_match_table.py
logs/: otter-buddy.log.2023-01-13
otter_welcome_buddy/: __init__.py  __main__.py  settings.py
otter_welcome_buddy/cogs/: command_template.py  events.py  hiring_timelines.py  interview_match.py  leetcode_challenge.py  new_roles.py  new_user_joins.py  roles.py
otter_welcome_buddy/common/: constants.py
otter_welcome_buddy/common/handlers/: graphql.py  leetcode.py
otter_welcome_buddy/common/json_schemas/: leetcode_schemas.py
otter_welcome_buddy/common/utils/: database.py  dates.py  discord_.py  image.py  requests.py
otter_welcome_buddy/common/utils/types/: common.py  handlers.py  interview_match.py
otter_welcome_buddy/database/: db_guild.py  db_helpers.py  db_interview_match.py  db_leetcode_problem.py  db_leetcode_user.py  db_user.py  dbconn.py
otter_welcome_buddy/database/handlers/: db_announcements_config_handler.py  db_guild_handler.py  db_interview_match_handler.py  db_role_config_handler.py
otter_welcome_buddy/database/models/: guild_model.py  interview_match_model.py  leetcode_model.py  user_model.py
otter_welcome_buddy/formatters/: debug.py  messages.py  timeline.py
otter_welcome_buddy/log/: dblogger.py  wrapper.py
otter_welcome_buddy/startup/: cogs.py  database.py  intents.py
otter_welcome_buddy/utils/: common.py
tests/: conftest.py  test_otter_welcome_buddy.py
tests/cogs/: test_events.py  test_hiring_timeline.py  test_new_user_join.py  test_roles.py
tests/common/handlers/: test_graphql.py  test_leetcode.py
tests/database/: test_db_helpers.py
tests/database/handlers/: test_db_announcements_config_handler.py  test_db_guild_handler.py  test_db_interview_match_handler.py  test_db_role_config_handler.py
tests/formatters/: test_debug.py  test_messages.py  test_timeline.py
tests/startup/: test_cogs.py  test_database.py  test_intents.py
tests/utils/: test_database.py  test_database_utils.py  test_dates.py  test_db_helpers.py  test_discord_.py  test_image.py  test_requests.py
